--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     ],
     "require": {
         "guzzlehttp/guzzle": "^7.4",
-        "symfony/dom-crawler": "^6.1"
+        "symfony/dom-crawler": "^6.1",
+        "symfony/css-selector": "^6.1"
     }
 }
