Usando Files para gerar o autoload de arquivos
- Com o files eu defino que sempre que o autoload por buscando o arquivo especificado vai ser inserido

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,10 @@
         [
             "./Teste.php"
         ],
+        "files":
+        [
+            "./functions.php"
+        ],
         "psr-4": {
             "Alura\\BuscadorDeCursos\\": "src/"
         }
