--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,10 @@
             "@test"
         ],
         "ls": "dir",
-        "exibe-cursos":"Alura\\BuscadorDeCursos::buscar"
+        "exibe-cursos":"Alura\\BuscadorDeCursos::buscar",
+        "post-update-cmd":[
+            "@test"
+        ]
     },
     "scripts-descriptions":{
         "check": "Rodas as verificações do código. PHAN, PHPCS e PHPUNIT"
