Adicionando arquivo bin

--- a/composer.json
+++ b/composer.json
@@ -48,5 +48,6 @@
     },
     "scripts-descriptions":{
         "check": "Rodas as verificações do código. PHAN, PHPCS e PHPUNIT"
-    }
+    },
+    "license": "GPL-3.0"
 }
