Disponibilizando o bin para o pacote corrigido

--- a/composer.json
+++ b/composer.json
@@ -49,5 +49,6 @@
     "scripts-descriptions":{
         "check": "Rodas as verificações do código. PHAN, PHPCS e PHPUNIT"
     },
-    "license": "GPL-3.0"
+    "license": "GPL-3.0",
+    "bin":["buscar-cursos.php"]
 }
